--- a/run_models.ipynb
+++ b/run_models.ipynb
@@ -51,9 +51,10 @@
    "source": [
     "def run_epoch(model, optimizer, data_iterator, mode='train', eval_frac=-1):\n",
     "    model.train()\n",
-    "    if mode == 'val':\n",
+    "    if mode != 'train':\n",
     "        model.eval()\n",
     "    stats = []\n",
+    "    all_outs = []\n",
     "    max_tr_batch = -1\n",
     "    num_egs, batch_idx, n_ones = 0, 1, 0\n",
     "    for batch in data_iterator:\n",
@@ -63,7 +64,8 @@
     "            batch, num_batches = batch\n",
     "            max_tr_batch = int(eval_frac * num_batches)\n",
     "            n_ones = (np.array(batch)[:, -1]).sum()\n",
-    "        loss, acc, bsz = model(batch)\n",
+    "        loss, acc, bsz, outs = model(np.array(batch))\n",
+    "        all_outs.append(outs)\n",
     "        stats.append([loss.item(), acc.item(), bsz, n_ones, len(batch)])\n",
     "        if mode == 'train' and ((batch_idx < max_tr_batch) or (max_tr_batch < 0)):\n",
     "            optimizer.zero_grad()\n",
@@ -74,7 +76,7 @@
     "    stats = np.array(stats)\n",
     "    avg_loss = np.mean(stats[:, 0])\n",
     "    avg_acc = (stats[:, 1]).sum() / (stats[:, 2].sum() * 1.0)\n",
-    "    return (avg_loss, avg_acc), stats[max_tr_batch:, :]"
+    "    return (avg_loss, avg_acc), stats[max_tr_batch:, :], all_outs"
    ]
   },
   {
@@ -115,21 +117,24 @@
     "            dataset = setwise_dataset[set_id]\n",
     "            model.remap_embedders(dataset, set_id)\n",
     "            data_iter = get_batch_iterator(dataset, BATCH_SZ, shuffle=shuffle)\n",
-    "            this_stats, _ = run_epoch(model, optimizer, data_iter, mode='train')\n",
+    "            this_stats, _, all_outs = run_epoch(model, optimizer, data_iter, mode='train')\n",
+    "            all_preds = torch.cat([x[0] for x in all_outs])\n",
+    "            all_ys = torch.cat([x[1] for x in all_outs])\n",
+    "#             print(set_id, (all_preds.argmax(dim=-1).eq(all_ys)), all_preds.argmax(dim=-1).float().mean(), all_ys.float().mean())\n",
     "            stats[set_id].append(this_stats)\n",
     "            accs.append(this_stats[-1])\n",
     "        acc_stats = np.min(accs), np.mean(accs), np.median(accs), np.max(accs)\n",
     "        print('Min Acc {} | Mean Acc : {} | Median Acc {} | Max Acc {} '.format(*acc_stats))\n",
-    "    return model, stats\n",
+    "    return model, stats, all_outs\n",
     "\n",
     "def evaluate(model, dataset, epoch_=-1, print_res=True, shuffle=False):\n",
     "    # get a data iterator for this epoch\n",
     "    model.eval()\n",
     "    data_iter = get_batch_iterator(dataset, BATCH_SZ, shuffle=shuffle, batch_info=False)\n",
-    "    epoch_stats, _ = run_epoch(model, None, data_iter, mode='test')\n",
+    "    epoch_stats, _, all_outs = run_epoch(model, None, data_iter, mode='val')\n",
     "    if print_res:\n",
     "        print('Epoch {} : Avg Loss = {} Avg Acc = {}'.format(epoch_, epoch_stats[0], epoch_stats[1]))\n",
-    "    return epoch_stats"
+    "    return epoch_stats, all_outs"
    ]
   },
   {
@@ -143,33 +148,19 @@
     "    for id_, (set_id, this_dataset) in enumerate(eval_setwise_dataset.items()):\n",
     "        set_id = MAX_TR_KEY + int(set_id)\n",
     "        model.remap_embedders(this_dataset, set_id)\n",
-    "        result = evaluate(model, this_dataset, print_res=False)\n",
+    "        result, all_outs = evaluate(model, this_dataset, print_res=False)\n",
     "        average_pred = np.mean(this_dataset[:, -1])\n",
     "        all_stats.append([*result, 1.0 - average_pred, average_pred])\n",
     "    av_res = np.mean(all_stats, axis=0)\n",
-    "    print('[{}] Epoch[{}] : Loss {}, Acc {}, Major [0] Acc {}, Marjor [1] Acc {}'.format(desc, epoch, *av_res))"
+    "    print('[{}] Epoch[{}] : Loss {}, Acc {}, Major [0] Acc {}, Marjor [1] Acc {}'.format(desc, epoch, *av_res))\n",
+    "    all_preds = torch.cat([x[0] for x in all_outs])\n",
+    "    all_ys = torch.cat([x[1] for x in all_outs])\n",
+    "#     print((all_preds.argmax(dim=-1).eq(all_ys).float()).mean().item(), all_preds.argmax(dim=-1).float().mean().item(), all_ys.float().mean().item())"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "DATA_PATH = 'hawkeye_trace_belady_graph.csv' # This is the CSV FILE WE ARE TRYING TO ANALYZE\n",
-    "TR_DESC = 'GRAPH'\n",
-    "EVAL_DATA_PATH = 'hawkeye_trace_belady_xalancbmk.csv' # This is the CSV FILE WE ARE TRYING TO ANALYZE\n",
-    "EVAL_DESC = 'XALANCBMK'\n",
-    "SAVE_FLDR = 'results'\n",
-    "N_EPOCHS = 5\n",
-    "MAX_GRAD_NORM = 0.1\n",
-    "SET_WISE = True\n",
-    "RANDOM_SEED = 140982301"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +208,7 @@
     "        eval_setwise(tr_val_setwise_dataset, model, desc=TR_DESC)\n",
     "        optimizer = Adam(model.parameters(), lr=LR) # Now we can add all the model parameters to the optimizer\n",
     "        for i in range(N_EPOCHS):\n",
-    "            model, stats = set_wise_trainer(model, optimizer, train_setwise_dataset, num_epochs=1)\n",
+    "            model, stats, _ = set_wise_trainer(model, optimizer, train_setwise_dataset, num_epochs=1)\n",
     "            eval_setwise(eval_setwise_dataset, model, MAX_TR_KEY=MAX_TR_KEY, desc=EVAL_DESC, epoch=i)\n",
     "            eval_setwise(tr_val_setwise_dataset, model, desc=TR_DESC, epoch=i)\n",
     "            torch.save(model.state_dict(), '{}/{}_saved_model.pth'.format(SAVE_FLDR, MODEL_DESC))\n",
@@ -226,41 +217,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DATA_PATH = 'hawkeye_trace_belady_xalancbmk.csv' # This is the CSV FILE WE ARE TRYING TO ANALYZE\n",
+    "TR_DESC = 'HWKY_ONLY_XALANCMBK'\n",
+    "EVAL_DATA_PATH = 'hawkeye_trace_belady_graph.csv' # This is the CSV FILE WE ARE TRYING TO ANALYZE\n",
+    "EVAL_DESC = 'HWKY_ONLY_GRAPH'\n",
+    "\n",
+    "# DATA_PATH = 'lru_trace_belady_xalancbmk.csv' # This is the CSV FILE WE ARE TRYING TO ANALYZE\n",
+    "# TR_DESC = 'LRU_XALANCBMK'\n",
+    "# EVAL_DATA_PATH = 'lru_trace_belady_xalancbmk.csv' # This is the CSV FILE WE ARE TRYING TO ANALYZE\n",
+    "# EVAL_DESC = 'LRU_GRAPH'\n",
+    "\n",
+    "SAVE_FLDR = 'results'\n",
+    "N_EPOCHS = 4\n",
+    "MAX_GRAD_NORM = 0.1\n",
+    "SET_WISE = True\n",
+    "RANDOM_SEED = 140982301"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Creating Model of type : TRANSFORMER, Batchsz = 64, Learning Rate = 0.0001\n",
+      "Creating Model of type : TRANSFORMER, Batchsz = 32, Learning Rate = 0.0001\n",
       "{'Program Counter': 0, 'Set Occupancy': 1, 'Belady Friendly': 2} True\n",
-      "This is the average accuracy :  0.6618220085895503  From predicting all zeros\n",
+      "This is the average accuracy :  0.906091602356272  From predicting all zeros\n",
       "Logging Pre-Training Performance\n",
-      "[XALANCBMK] Epoch[-1] : Loss 0.8347451482033902, Acc 0.23767585164697635, Major [0] Acc 0.06338080815081736, Marjor [1] Acc 0.9366191918491826\n",
-      "[GRAPH] Epoch[-1] : Loss 0.8134684979802731, Acc 0.24458333333333332, Major [0] Acc 0.026021041058635064, Marjor [1] Acc 0.973978958941365\n",
-      "Min Acc 0.89 | Mean Acc : 0.9522641527164227 | Median Acc 0.9572159090909091 | Max Acc 0.996875 \n",
-      "[XALANCBMK] Epoch[0] : Loss 0.014977071287513338, Acc 0.9980410242290749, Major [0] Acc 0.06338080815081736, Marjor [1] Acc 0.9366191918491826\n",
-      "[GRAPH] Epoch[0] : Loss 0.20673282063878354, Acc 0.9635984848484849, Major [0] Acc 0.026021041058635064, Marjor [1] Acc 0.973978958941365\n",
-      "Min Acc 0.9252941176470588 | Mean Acc : 0.9619861035916343 | Median Acc 0.9593939393939394 | Max Acc 0.996875 \n",
-      "[XALANCBMK] Epoch[1] : Loss 0.015025366871681232, Acc 0.9980410242290749, Major [0] Acc 0.06338080815081736, Marjor [1] Acc 0.9366191918491826\n",
-      "[GRAPH] Epoch[1] : Loss 0.21528790955496582, Acc 0.9635984848484849, Major [0] Acc 0.026021041058635064, Marjor [1] Acc 0.973978958941365\n",
-      "Min Acc 0.9247058823529412 | Mean Acc : 0.9620733569712469 | Median Acc 0.9593939393939394 | Max Acc 0.996875 \n",
-      "[XALANCBMK] Epoch[2] : Loss 0.015057549764072333, Acc 0.9980410242290749, Major [0] Acc 0.06338080815081736, Marjor [1] Acc 0.9366191918491826\n",
-      "[GRAPH] Epoch[2] : Loss 0.21180816443743286, Acc 0.9635984848484849, Major [0] Acc 0.026021041058635064, Marjor [1] Acc 0.973978958941365\n",
-      "Min Acc 0.9011764705882352 | Mean Acc : 0.9603416753855692 | Median Acc 0.9593939393939394 | Max Acc 0.996875 \n",
-      "[XALANCBMK] Epoch[3] : Loss 0.015814002520544837, Acc 0.9980410242290749, Major [0] Acc 0.06338080815081736, Marjor [1] Acc 0.9366191918491826\n",
-      "[GRAPH] Epoch[3] : Loss 0.2009639328048665, Acc 0.9635984848484849, Major [0] Acc 0.026021041058635064, Marjor [1] Acc 0.973978958941365\n",
-      "Min Acc 0.9158823529411765 | Mean Acc : 0.9613759464853134 | Median Acc 0.9593939393939394 | Max Acc 0.996875 \n",
-      "[XALANCBMK] Epoch[4] : Loss 0.014882609818554361, Acc 0.9980410242290749, Major [0] Acc 0.06338080815081736, Marjor [1] Acc 0.9366191918491826\n",
-      "[GRAPH] Epoch[4] : Loss 0.2202480000470876, Acc 0.9635984848484849, Major [0] Acc 0.026021041058635064, Marjor [1] Acc 0.973978958941365\n"
+      "[HWKY_ONLY_GRAPH] Epoch[-1] : Loss 0.9173746311607427, Acc 0.16526159899556997, Major [0] Acc 0.09175442146787596, Marjor [1] Acc 0.9082455785321241\n",
+      "[HWKY_ONLY_XALANCMBK] Epoch[-1] : Loss 1.0313418675214052, Acc 0.03484375, Major [0] Acc 0.0, Marjor [1] Acc 1.0\n",
+      "Min Acc 0.90125 | Mean Acc : 0.986969926411694 | Median Acc 0.99875 | Max Acc 1.0 \n",
+      "[HWKY_ONLY_GRAPH] Epoch[0] : Loss 0.8451727729530456, Acc 0.9109264052468645, Major [0] Acc 0.09175442146787596, Marjor [1] Acc 0.9082455785321241\n",
+      "[HWKY_ONLY_XALANCMBK] Epoch[0] : Loss 7.306938260853713e-05, Acc 1.0, Major [0] Acc 0.0, Marjor [1] Acc 1.0\n",
+      "Min Acc 0.90875 | Mean Acc : 0.9912202947107958 | Median Acc 0.99875 | Max Acc 1.0 \n",
+      "[HWKY_ONLY_GRAPH] Epoch[1] : Loss 0.6962520905341559, Acc 0.910941079159908, Major [0] Acc 0.09175442146787596, Marjor [1] Acc 0.9082455785321241\n",
+      "[HWKY_ONLY_XALANCMBK] Epoch[1] : Loss 0.0001933087266934308, Acc 1.0, Major [0] Acc 0.0, Marjor [1] Acc 1.0\n",
+      "Min Acc 0.9375 | Mean Acc : 0.993274152196922 | Median Acc 0.99875 | Max Acc 1.0 \n",
+      "[HWKY_ONLY_GRAPH] Epoch[2] : Loss 0.3489139076877113, Acc 0.9519291226381689, Major [0] Acc 0.09175442146787596, Marjor [1] Acc 0.9082455785321241\n",
+      "[HWKY_ONLY_XALANCMBK] Epoch[2] : Loss 9.332432517794587e-05, Acc 1.0, Major [0] Acc 0.0, Marjor [1] Acc 1.0\n",
+      "Min Acc 0.991875 | Mean Acc : 0.9977488790119571 | Median Acc 0.99890625 | Max Acc 1.0 \n",
+      "[HWKY_ONLY_GRAPH] Epoch[3] : Loss 0.35235743343907694, Acc 0.9647687965512123, Major [0] Acc 0.09175442146787596, Marjor [1] Acc 0.9082455785321241\n",
+      "[HWKY_ONLY_XALANCMBK] Epoch[3] : Loss 8.008405052351009e-05, Acc 1.0, Major [0] Acc 0.0, Marjor [1] Acc 1.0\n"
      ]
     }
    ],
    "source": [
-    "batch_szs = [64]\n",
+    "batch_szs = [32]\n",
     "lrs = [1e-4] #, 3e-4]\n",
-    "model_types = ['TRANSFORMER'] #, \"TRANSFORMER_1\", \"TRANSFORMER_2\"]\n",
+    "model_types = ['TRANSFORMER'] #, \"TRANSFORMER_1\"]\n",
     "SAVE_FLDR = \"pytorch_c++\"\n",
     "\n",
     "for BATCH_SZ in batch_szs:\n",
@@ -269,13 +280,6 @@
     "            MODEL_DESC = \"{}-{}_BSZ.{}_LR.{}\".format(TR_DESC, MODEL_TYPE, BATCH_SZ, LR)\n",
     "            model_main()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -294,6 +298,32 @@
     "print(len(values), dataset.shape, values.mean(), values.max(), values.min(), np.median(values))\n",
     "print(bc)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.33296782 0.33755649]\n"
+     ]
+    }
+   ],
+   "source": [
+    "temp = csv_to_data(DATA_PATH, ['Hit', 'Belady Hit'])\n",
+    "temp = np.array(temp)\n",
+    "print(temp.mean(axis=0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
