--- a/run_models.ipynb
+++ b/run_models.ipynb
@@ -149,7 +149,7 @@
     "        set_id = MAX_TR_KEY + int(set_id)\n",
     "        model.remap_embedders(this_dataset, set_id)\n",
     "        result, all_outs = evaluate(model, this_dataset, print_res=False)\n",
-    "        average_pred = np.mean(this_dataset[:, -1])\n",
+    "        average_pred = np.mean(this_dataset[:, 2])\n",
     "        all_stats.append([*result, 1.0 - average_pred, average_pred])\n",
     "    av_res = np.mean(all_stats, axis=0)\n",
     "    print('[{}] Epoch[{}] : Loss {}, Acc {}, Major [0] Acc {}, Marjor [1] Acc {}'.format(desc, epoch, *av_res))\n",
@@ -160,11 +160,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def model_main():\n",
+    "def model_main(join=False):\n",
     "    if not os.path.exists(SAVE_FLDR):\n",
     "        os.makedirs(SAVE_FLDR)\n",
     "\n",
@@ -172,8 +172,9 @@
     "    print('Creating Model of type : {}, Batchsz = {}, Learning Rate = {}'.format(MODEL_TYPE, BATCH_SZ, LR))\n",
     "    model = get_model(MODEL_TYPE)\n",
     "    chosen_columns = model.get_data_columns()\n",
+    "    chosen_columns.append('Set')\n",
     "    train_dataset = csv_to_data(DATA_PATH, chosen_columns)\n",
-    "    average_pred = np.mean(train_dataset[:, -1])\n",
+    "    average_pred = np.mean(train_dataset[:, -2])\n",
     "    if torch.cuda.is_available():\n",
     "        model.cuda()\n",
     "    model.use_cuda = torch.cuda.is_available()\n",
@@ -186,8 +187,23 @@
     "        model.prep_for_data(train_dataset, temp_order=True)\n",
     "        model = trainer(model, optimizer, train_dataset, num_epochs=N_EPOCHS, desc=MODEL_DESC, shuffle=False)\n",
     "    else:\n",
-    "        train_setwise_dataset = group_by_set(train_dataset)\n",
-    "        eval_setwise_dataset = group_by_set(eval_dataset)\n",
+    "        train_setwise_dataset = group_by_set(train_dataset, set_idx=3)\n",
+    "        eval_setwise_dataset = group_by_set(eval_dataset, set_idx=3)\n",
+    "        print('Total keys before : ', len(train_setwise_dataset.keys()))\n",
+    "        if join:\n",
+    "            MAX_TR_KEY = max([int(x) for x in train_setwise_dataset.keys()]) + 1\n",
+    "            new_eval_set = {}\n",
+    "            for k, v in eval_setwise_dataset.items():\n",
+    "                new_id = MAX_TR_KEY + int(k)\n",
+    "                train_setwise_dataset[new_id] = v\n",
+    "                new_eval_set[new_id] = v\n",
+    "            print('Total keys After : ', len(train_setwise_dataset.keys()))\n",
+    "            eval_setwise_dataset = new_eval_set\n",
+    "            for k, v in train_setwise_dataset.items():\n",
+    "                if v.shape[0] < 2:\n",
+    "                    print(k)\n",
+    "        res = [x.shape[0] for _, x in train_setwise_dataset.items()]\n",
+    "        print(min(res), np.mean(res), np.median(res), max(res))\n",
     "        all_tr_keys = list(train_setwise_dataset.keys())\n",
     "        val_keys = np.random.choice(all_tr_keys, size=int(0.2 * len(all_tr_keys)))\n",
     "        tr_keys = set(all_tr_keys) - set(val_keys)\n",
@@ -204,12 +220,14 @@
     "\n",
     "        print('Logging Pre-Training Performance')\n",
     "        MAX_TR_KEY = max([int(x) for x in train_setwise_dataset.keys()]) + 1\n",
-    "        eval_setwise(eval_setwise_dataset, model, MAX_TR_KEY=MAX_TR_KEY, desc=EVAL_DESC)\n",
+    "        if not join:\n",
+    "            eval_setwise(eval_setwise_dataset, model, MAX_TR_KEY=MAX_TR_KEY, desc=EVAL_DESC)\n",
     "        eval_setwise(tr_val_setwise_dataset, model, desc=TR_DESC)\n",
     "        optimizer = Adam(model.parameters(), lr=LR) # Now we can add all the model parameters to the optimizer\n",
     "        for i in range(N_EPOCHS):\n",
     "            model, stats, _ = set_wise_trainer(model, optimizer, train_setwise_dataset, num_epochs=1)\n",
-    "            eval_setwise(eval_setwise_dataset, model, MAX_TR_KEY=MAX_TR_KEY, desc=EVAL_DESC, epoch=i)\n",
+    "            if not join:\n",
+    "                eval_setwise(eval_setwise_dataset, model, MAX_TR_KEY=MAX_TR_KEY, desc=EVAL_DESC, epoch=i)\n",
     "            eval_setwise(tr_val_setwise_dataset, model, desc=TR_DESC, epoch=i)\n",
     "            torch.save(model.state_dict(), '{}/{}_saved_model.pth'.format(SAVE_FLDR, MODEL_DESC))\n",
     "    # Need to return the eval performance here"
@@ -217,14 +235,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "DATA_PATH = 'hawkeye_trace_belady_xalancbmk.csv' # This is the CSV FILE WE ARE TRYING TO ANALYZE\n",
-    "TR_DESC = 'HWKY_ONLY_XALANCMBK'\n",
-    "EVAL_DATA_PATH = 'hawkeye_trace_belady_graph.csv' # This is the CSV FILE WE ARE TRYING TO ANALYZE\n",
-    "EVAL_DESC = 'HWKY_ONLY_GRAPH'\n",
+    "DATA_PATH = 'hawkeye_trace_belady_graph.csv' # This is the CSV FILE WE ARE TRYING TO ANALYZE\n",
+    "TR_DESC = 'HWKY_ONLY_GRAPH'\n",
+    "EVAL_DATA_PATH = 'lru_trace_belady_xalancbmk.csv' # This is the CSV FILE WE ARE TRYING TO ANALYZE\n",
+    "EVAL_DESC = 'LRU_XALANCHBMK'\n",
+    "JOIN = False\n",
     "\n",
     "# DATA_PATH = 'lru_trace_belady_xalancbmk.csv' # This is the CSV FILE WE ARE TRYING TO ANALYZE\n",
     "# TR_DESC = 'LRU_XALANCBMK'\n",
@@ -240,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -249,22 +268,10 @@
      "text": [
       "Creating Model of type : TRANSFORMER, Batchsz = 32, Learning Rate = 0.0001\n",
       "{'Program Counter': 0, 'Set Occupancy': 1, 'Belady Friendly': 2} True\n",
-      "This is the average accuracy :  0.906091602356272  From predicting all zeros\n",
-      "Logging Pre-Training Performance\n",
-      "[HWKY_ONLY_GRAPH] Epoch[-1] : Loss 0.9173746311607427, Acc 0.16526159899556997, Major [0] Acc 0.09175442146787596, Marjor [1] Acc 0.9082455785321241\n",
-      "[HWKY_ONLY_XALANCMBK] Epoch[-1] : Loss 1.0313418675214052, Acc 0.03484375, Major [0] Acc 0.0, Marjor [1] Acc 1.0\n",
-      "Min Acc 0.90125 | Mean Acc : 0.986969926411694 | Median Acc 0.99875 | Max Acc 1.0 \n",
-      "[HWKY_ONLY_GRAPH] Epoch[0] : Loss 0.8451727729530456, Acc 0.9109264052468645, Major [0] Acc 0.09175442146787596, Marjor [1] Acc 0.9082455785321241\n",
-      "[HWKY_ONLY_XALANCMBK] Epoch[0] : Loss 7.306938260853713e-05, Acc 1.0, Major [0] Acc 0.0, Marjor [1] Acc 1.0\n",
-      "Min Acc 0.90875 | Mean Acc : 0.9912202947107958 | Median Acc 0.99875 | Max Acc 1.0 \n",
-      "[HWKY_ONLY_GRAPH] Epoch[1] : Loss 0.6962520905341559, Acc 0.910941079159908, Major [0] Acc 0.09175442146787596, Marjor [1] Acc 0.9082455785321241\n",
-      "[HWKY_ONLY_XALANCMBK] Epoch[1] : Loss 0.0001933087266934308, Acc 1.0, Major [0] Acc 0.0, Marjor [1] Acc 1.0\n",
-      "Min Acc 0.9375 | Mean Acc : 0.993274152196922 | Median Acc 0.99875 | Max Acc 1.0 \n",
-      "[HWKY_ONLY_GRAPH] Epoch[2] : Loss 0.3489139076877113, Acc 0.9519291226381689, Major [0] Acc 0.09175442146787596, Marjor [1] Acc 0.9082455785321241\n",
-      "[HWKY_ONLY_XALANCMBK] Epoch[2] : Loss 9.332432517794587e-05, Acc 1.0, Major [0] Acc 0.0, Marjor [1] Acc 1.0\n",
-      "Min Acc 0.991875 | Mean Acc : 0.9977488790119571 | Median Acc 0.99890625 | Max Acc 1.0 \n",
-      "[HWKY_ONLY_GRAPH] Epoch[3] : Loss 0.35235743343907694, Acc 0.9647687965512123, Major [0] Acc 0.09175442146787596, Marjor [1] Acc 0.9082455785321241\n",
-      "[HWKY_ONLY_XALANCMBK] Epoch[3] : Loss 8.008405052351009e-05, Acc 1.0, Major [0] Acc 0.0, Marjor [1] Acc 1.0\n"
+      "This is the average accuracy :  0.6618220085895503  From predicting all zeros\n",
+      "Total keys before :  2048\n",
+      "25 51.50244140625 50.0 115\n",
+      "Logging Pre-Training Performance\n"
      ]
     }
    ],
@@ -274,11 +281,12 @@
     "model_types = ['TRANSFORMER'] #, \"TRANSFORMER_1\"]\n",
     "SAVE_FLDR = \"pytorch_c++\"\n",
     "\n",
+    "\n",
     "for BATCH_SZ in batch_szs:\n",
     "    for LR in lrs:\n",
     "        for MODEL_TYPE in model_types:\n",
     "            MODEL_DESC = \"{}-{}_BSZ.{}_LR.{}\".format(TR_DESC, MODEL_TYPE, BATCH_SZ, LR)\n",
-    "            model_main()"
+    "            model_main(join=JOIN)"
    ]
   },
   {
