--- a/knowledge_distillation.ipynb
+++ b/knowledge_distillation.ipynb
@@ -11,7 +11,7 @@
     "import random\n",
     "from models import *\n",
     "from torch.optim import Adam\n",
-    "from dataformatter import *\n",
+    "from dataformatter import * \n",
     "import torch.optim as optim\n",
     "from vanilla_kd import VanillaKD\n",
     "import copy"
@@ -56,16 +56,18 @@
    "outputs": [],
    "source": [
     "N_EPOCHS = 5\n",
-    "DATA_PATH = '../hawkeye_trace_belady_graph.csv' # This is the CSV FILE WE ARE TRYING TO ANALYZE\n",
+    "DATA_PATH = '../hawkeye_trace_belady_bzip.csv' # This is the CSV FILE WE ARE TRYING TO ANALYZE\n",
     "TR_DESC = 'GRAPH'\n",
-    "EVAL_DATA_PATH = '../hawkeye_trace_belady_xalancbmk.csv' # This is the CSV FILE WE ARE TRYING TO ANALYZE\n",
-    "EVAL_DESC = 'XALANBMK'\n",
+    "EVAL_DATA_PATH = '../lru_trace_belady_bzip.csv' # This is the CSV FILE WE ARE TRYING TO ANALYZE\n",
+    "EVAL_DESC = 'GRAPH'\n",
     "\n",
     "SAVE_FLDR = 'results'\n",
     "N_EPOCHS = 5\n",
     "MAX_GRAD_NORM = 0.1\n",
     "SET_WISE = True\n",
-    "RANDOM_SEED = 140982301"
+    "RANDOM_SEED = 140982301\n",
+    "join=False\n",
+    "student_model_initialization=\"SFC\""
    ]
   },
   {
@@ -77,32 +79,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "teacher_model_file=\"GRAPH-TRANSFORMER_BSZ.64_LR.0.0001_saved_model.pth\""
+    "teacher_model_file=\"JOINT_DATA_BZIP-TRANSFORMER_BSZ.32_LR.0.0001_saved_model.pth\"\n",
+    "# student_model_file=\"STUDENT_SFC_JOINT_DATA_XALANCHBMK-TRANSFORMER_BSZ.32_LR.0.0001_saved_model.pth\"\n",
+    "if 'JOINT' in teacher_model_file:\n",
+    "    join=True\n",
+    "else:\n",
+    "    join=False"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "join"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "TRANSFORMER 64 0.0001\n"
+      "TRANSFORMER TRANSFORMER MODEL 32 0.32\n"
      ]
     }
    ],
    "source": [
-    "MODEL_TYPE=teacher_model_file.split(\"_\")[0].split('-')[1]\n",
+    "data_type,remaining=teacher_model_file.split('-')\n",
+    "MODEL_TYPE=''.join(remaining.split(\"_\")[0])\n",
     "MODEL_DESC='{} MODEL'.format(MODEL_TYPE)\n",
-    "BATCH_SZ=int(teacher_model_file.split(\"_\")[1].split('.')[1])\n",
-    "LR=float(teacher_model_file.split(\"_\")[2][3:])\n",
-    "print(MODEL_TYPE,BATCH_SZ,LR)"
+    "BATCH_SZ=int(remaining.split(\"_\")[1][4:])\n",
+    "LR=float(teacher_model_file.split(\"_\")[3][3:])\n",
+    "print(MODEL_TYPE,MODEL_DESC,BATCH_SZ,LR)"
    ]
   },
   {
@@ -114,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,51 +152,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "chosen_columns = teacher_model.get_data_columns()\n",
+    "chosen_columns.append('Set')\n",
+    "\n",
     "train_dataset = csv_to_data(DATA_PATH, chosen_columns)\n",
     "eval_dataset = csv_to_data(EVAL_DATA_PATH, chosen_columns)\n",
     "\n",
     "average_pred = np.mean(train_dataset[:, -1])\n",
     "if torch.cuda.is_available():\n",
     "    teacher_model.cuda()\n",
+    "teacher_model.use_cuda=torch.cuda.is_available()\n",
+    "\n",
     "\n",
     "# teacher_model.load_state_dict(torch.load('../teacher_FC.model'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "if SET_WISE:\n",
-    "    train_setwise_dataset = group_by_set(train_dataset)\n",
-    "    eval_setwise_dataset = group_by_set(eval_dataset)\n",
-    "    all_tr_keys = list(train_setwise_dataset.keys())\n",
-    "    val_keys = np.random.choice(all_tr_keys, size=int(0.1 * len(all_tr_keys)))\n",
-    "    tr_keys = set(all_tr_keys) - set(val_keys)\n",
+    "# Always SetWise\n",
+    "train_setwise_dataset = group_by_set(train_dataset, set_idx=3)\n",
+    "eval_setwise_dataset = group_by_set(eval_dataset, set_idx=3)\n",
     "\n",
-    "    vals = [len(x) for x in list(train_setwise_dataset.values())]\n",
-    "    max_key = all_tr_keys[np.argmax(vals)]\n",
-    "    teacher_model.use_cuda=torch.cuda.is_available()\n",
-    "    teacher_model.prep_for_data(train_setwise_dataset[max_key], temp_order=True)\n",
-    "    \n",
-    "    for set_id, this_dataset in train_setwise_dataset.items():\n",
-    "        teacher_model.remap_embedders(this_dataset, set_id)\n",
+    "if join:\n",
+    "    MAX_TR_KEY = max([int(x) for x in train_setwise_dataset.keys()]) + 1\n",
+    "    new_eval_set = {}\n",
+    "    for k, v in eval_setwise_dataset.items():\n",
+    "        new_id = MAX_TR_KEY + int(k)\n",
+    "        train_setwise_dataset[new_id] = v\n",
+    "        new_eval_set[new_id] = v\n",
+    "#     print('Total keys After : ', len(train_setwise_dataset.keys()))\n",
+    "    eval_setwise_dataset = new_eval_set\n",
+    "    for k, v in train_setwise_dataset.items():\n",
+    "        if v.shape[0] < 2:\n",
+    "            print(k)\n",
+    "res = [x.shape[0] for _, x in train_setwise_dataset.items()]\n",
+    "# print(min(res), np.mean(res), np.median(res), max(res))\n",
+    "all_tr_keys = list(train_setwise_dataset.keys())\n",
+    "val_keys = np.random.choice(all_tr_keys, size=int(0.2 * len(all_tr_keys)))\n",
+    "tr_keys = set(all_tr_keys) - set(val_keys)\n",
     "\n",
-    "    tr_val_setwise_dataset = {k: train_setwise_dataset[k] for k in val_keys}\n",
-    "    train_setwise_dataset = {k: train_setwise_dataset[k] for k in tr_keys}\n",
-    "else:\n",
-    "    teacher_model.prep_for_data(train_dataset, temp_order=True)"
+    "vals = [len(x) for x in list(train_setwise_dataset.values())]\n",
+    "max_key = all_tr_keys[np.argmax(vals)]\n",
+    "\n",
+    "teacher_model.prep_for_data(train_setwise_dataset[max_key], temp_order=True)\n",
+    "\n",
+    "for set_id, this_dataset in train_setwise_dataset.items():\n",
+    "    teacher_model.remap_embedders(this_dataset, set_id)\n",
+    "\n",
+    "tr_val_setwise_dataset = {k: train_setwise_dataset[k] for k in val_keys}\n",
+    "train_setwise_dataset = {k: train_setwise_dataset[k] for k in tr_keys}\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -177,42 +222,32 @@
        "<All keys matched successfully>"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "teacher_model.load_state_dict(torch.load('./pytorch_c++/'+teacher_model_file))"
+    "teacher_model.load_state_dict(torch.load('../'+teacher_model_file))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "student_model_initialization='SFC'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "TC True\n",
       "MLP(\n",
       "  (loss_fn): CrossEntropyLoss()\n",
       "  (model): Sequential(\n",
       "    (0): Dropout(p=0.2, inplace=False)\n",
-      "    (1): Linear(in_features=32, out_features=2, bias=True)\n",
+      "    (1): Linear(in_features=10, out_features=2, bias=True)\n",
       "  )\n",
-      "  (pc_embedding): Embedding(500, 16, padding_idx=0)\n",
-      "  (set_occ_embedding): Embedding(500, 16, padding_idx=0)\n",
+      "  (pc_embedding): Embedding(500, 5, padding_idx=0)\n",
+      "  (set_occ_embedding): Embedding(500, 5, padding_idx=0)\n",
       ")\n"
      ]
     }
@@ -222,16 +257,15 @@
     "    os.makedirs(SAVE_FLDR)\n",
     "\n",
     "student_model = get_model(student_model_initialization)\n",
+    "if torch.cuda.is_available():\n",
+    "    student_model.cuda()\n",
+    "student_model.use_cuda = torch.cuda.is_available()\n",
     "\n",
-    "# student_model=copy.deepcopy(teacher_model)\n",
     "# chosen_columns = student_model.get_data_columns()\n",
     "\n",
-    "\n",
+    "all_tr_keys = list(train_setwise_dataset.keys())\n",
     "vals = [len(x) for x in list(train_setwise_dataset.values())]\n",
     "max_key = all_tr_keys[np.argmax(vals)]\n",
-    "# student_model.use_cuda=True\n",
-    "print(\"TC\",torch.cuda.is_available())\n",
-    "student_model.use_cuda = torch.cuda.is_available()\n",
     "\n",
     "student_model.prep_for_data(train_setwise_dataset[max_key], temp_order=True)\n",
     "\n",
@@ -242,20 +276,26 @@
     "# student_model.pc_embedding=nn.Embedding.from_pretrained(teacher_model.pc_embedding.weight.clone().detach(),freeze=True) \n",
     "# student_model.set_occ_embedding=nn.Embedding.from_pretrained(teacher_model.set_occ_embedding.weight.clone().detach(),freeze=True)# clone and detach\n",
     "\n",
-    "# if(student_model_initialization==\"ST\"):\n",
-    "    \n",
     "for set_id, this_dataset in train_setwise_dataset.items():\n",
     "    student_model.remap_embedders(this_dataset, set_id)\n",
     "\n",
-    "if torch.cuda.is_available():\n",
-    "    student_model.cuda()\n",
+    "\n",
     "\n",
     "print(student_model)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# student_model.load_state_dict(torch.load('../student_models/'+student_model_file))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,45 +316,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "distiller.train_student(10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Evaluating Student...\n",
-      "Student Average Accuracy:0.3015661859355816 Student Median Accuracy:0.03999999910593033 |Student Loss:1.4462884664535522\n"
+      "Training Student...\n",
+      "Epoch: 0 | Student Average Accuracy:0.783225628888053 Student Median Accuracy:0.8199999928474426 |Distillation Loss: 4.450200080871582\n",
+      "Epoch: 0 | Teacher Average Accuracy:0.9948011914020031 Teacher Median Accuracy:1.0 \n",
+      "Epoch: 1 | Student Average Accuracy:0.8467395457644645 Student Median Accuracy:0.8799999952316284 |Distillation Loss: 0.1608888804912567\n",
+      "Epoch: 1 | Teacher Average Accuracy:0.9948011914020031 Teacher Median Accuracy:1.0 \n",
+      "Epoch: 2 | Student Average Accuracy:0.8536133035558237 Student Median Accuracy:0.8799999952316284 |Distillation Loss: 0.8291765451431274\n",
+      "Epoch: 2 | Teacher Average Accuracy:0.9948011914020031 Teacher Median Accuracy:1.0 \n",
+      "Epoch: 3 | Student Average Accuracy:0.8549304010853853 Student Median Accuracy:0.8999999761581421 |Distillation Loss: 2.643634080886841\n",
+      "Epoch: 3 | Teacher Average Accuracy:0.9948011914020031 Teacher Median Accuracy:1.0 \n"
      ]
     }
    ],
+   "source": [
+    "distiller.train_student(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "distiller.evaluate_student()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 197,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Evaluating Teacher...\n",
+      "Teacher Average Accuracy:0.9948011914020031 Teacher Median Accuracy:1.0 |Teacher Loss:5.838825018145144e-06\n"
+     ]
+    }
+   ],
    "source": [
-    "SAVE_FLDR=\"results\"\n",
-    "w_wo='without_embeddings_'\n",
-    "torch.save(distiller.student_model.state_dict(), '{}/{}_saved_model.pth'.format(SAVE_FLDR,'STUDENT_'+w_wo+student_model_initialization))"
+    "distiller.evaluate_teacher()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 176,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SAVE_FLDR=\"../student_models\"\n",
+    "torch.save(distiller.student_model.state_dict(), \n",
+    "           os.path.join(SAVE_FLDR,'STUDENT_'+student_model_initialization+'_'+teacher_model_file))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -327,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -345,60 +410,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "16066"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "student_size"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "461954"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "teacher_size"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "7.189050390612842"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "teacher_size/student_size"
    ]
